--- a/frontend/luna-frontend/src/style2.css
+++ b/frontend/luna-frontend/src/style2.css
@@ -4,6 +4,7 @@
   --accent-soft: #f3e9ff;
   --text-main: #3b2a26;
   --text-muted: #7a6257;
+  --prev:#fff1dc;
 }
 
 * {
@@ -180,6 +181,7 @@ body {
   font-size: 2rem;
   margin-bottom: 1rem;
   text-align: center;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .section-text {
@@ -408,7 +410,12 @@ body {
     gap: 0.5rem;
     text-align: center;
   }
+    .menu-grid {
+    grid-template-columns: repeat(1, 1fr); /* MOBILE GRID */
+  }
+
 }
+
 /* ADD TO CART BUTTON */
 .add-btn {
   margin-top: 0.5rem;
